--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1614,7 +1614,7 @@ body.boxed {
 }
 #time{
   margin: 10px;
-  color: #fff;
+  color: #E7804F;
   font-size: 17px;
 }
 .navigation > li ul > li > ul > li > a {
