--- a/views/mux-detail.ejs
+++ b/views/mux-detail.ejs
@@ -126,27 +126,27 @@
                 <tbody>
                 <tr>
                   <td>Name</td>
-                  <td id="mux-name"><%=result.name%></td>
+                  <td id="mux-name"><span class="label label-success"><%=result.name%></span></td>
                 </tr>
                 <tr>
                   <td>IP Address</td>
-                  <td id="mux-ip"><%=result.ip_address%></td>
+                  <td id="mux-ip"><span class="label label-success"><%=result.ip_address%></span></td>
                 </tr>
                 <tr>
                   <td>Location</td>
-                  <td id="mux-location"><%=result.location%></td>
+                  <td id="mux-location"><span class="label label-success"><%=result.location%></span></td>
                 </tr>
                 <tr>
                   <td>Type</td>
-                  <td id="mux-type"><%=result.type%></td>
+                  <td id="mux-type"><span class="label label-success"><%=result.type%></span></td>
                 </tr>
                 <tr>
                   <td>Read Community String</td>
-                  <td id="mux-read"><%=result.read_community%></td>
+                  <td id="mux-read"><span class="label label-success"><%=result.read_community%></span></td>
                 </tr>
                 <tr>
                   <td>Write Community String</td>
-                  <td id="mux-write"><%=result.write_community%></td>
+                  <td id="mux-write"><span class="label label-success"><%=result.write_community%></span></td>
                 </tr>
                 </tbody>
               </table>
